[optimizer] Refactor metrics model to MetricPoint and MetricSeries